--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,3 +18,6 @@ jobs:
           remote_key: ${{ secrets.REMOTE_KEY }}
           remote_key_pass: ${{ secrets.REMOTE_KEY_PASS }}
           remote_path: ${{ secrets.REMOTE_PATH }}
+      - name: Kill old bot process via rsh
+        run: |
+          ssh -o StrictHostKeyChecking=no -i <(echo "${{ secrets.REMOTE_KEY }}") ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }} "pkill -9 -f run_bot.sh || echo 'No process found'"
